@@ -14,10 +14,13 @@
 #
 # History:
 #
+#	10/02/2013	lec
+# 	- TR11423/human-disease-portal (HDP)
+#
 #	08/12/2009	lec
 #	- TR 9461, added DATE, updated OMIMtermcheck.py
 #
-
+#
 #	04/13/2005	lec
 #	- TR 3853, OMIM
 #
@@ -74,6 +77,14 @@ QC1_FILE="OMIMqc1"
 QC2_FILE="OMIMqc2"
 DAG_ROOT_ID=""
 
+# TR11423/human-disease-portal (HDP)
+# disease-cluster files
+DCLUSTER_FILE="${RUNTIME_DIR}/OMIM.clusters"
+DCLUSTER_FILENAME="OMIM.clusters.synonym"
+DCLUSTERSYN_FILE="${RUNTIME_DIR}/${DCLUSTER_FILENAME}"
+DCLUSTERDIFF1_FILE="${RUNTIME_DIR}/OMIM.clusters.diff1"
+DCLUSTERDIFF2_FILE="${RUNTIME_DIR}/OMIM.clusters.diff2"
+
 export DOWNLOAD_FILE_DIR
 export COMPRESSED_OMIM_FILE
 export OMIM_FILE
@@ -86,4 +97,10 @@ export EXCLUDE_FILE
 export QC1_FILE
 export QC2_FILE
 export DAG_ROOT_ID
+
+export DCLUSTER_FILE
+export DCLUSTERSYN_FILENAME
+export DCLUSTERSYN_FILE
+export DCLUSTERDIFF1_FILE
+export DCLUSTERDIFF2_FILE
 
