@@ -15,14 +15,14 @@
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.special">OMIM.special</A> - OMIM-to-MGI Word Translation fil; maintained by A&P
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.synonym">OMIM.synonym</A> - OMIM synonyms file; maintained by A&P
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.exclude">OMIM.exclude</A> - OMIM exclude file; maintained by A&P
-<LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.clustuers">OMIM.clusters</A> - OBO-Disease-Cluster file; maintained by A&P
+<LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.clusters">OMIM.clusters</A> - OBO-Disease-Cluster file; maintained by A&P
 </UL>
 
 <H3>Reports</H3>
 <UL>
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/discrepancy.html">discrepancy.html</A> - Curator Report
 <LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIMtermcheck.current.rpt">OMIMtermcheck.current.rpt</A> - Checks new OMIM.tab terms vs. MGI OMIM terms; new OMIM.tab OMIM secondary ids vs. MGI OMIM secondary ids
-<LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.clusters.all"><B>OMIM.clusters.all</B></A> - OMIM ids in MGI but not in OBO-Disease-Cluster file
+<LI><A HREF="/data/loads/mgi/vocload/OMIM/OMIM.clusters.diff1"</A>OMIM.clusters.diff1</A> - OMIM ids in MGI but not in OBO-Disease-Cluster file
 </UL>
 
 <H3>Outputs</H3>
