@@ -1,3 +1,10 @@
+TAG: vocload-tr11423-?
+DATE: 10/02/2013
+STAFF: lec
+CHANGES: branch point tag for TR11423/HDP (human disease portal)
+1) TR11423/add loadOBO-DC*, OMIM.config, VOClib.config
+add the disease-cluster (OBO-DC-file) to the OMIM configuration
+
 TAG: vocload-tr11423-BP
 DATE: 10/02/2013
 STAFF: lec
